# convers.me

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  README.md  REAL.md  package-lock.json  package.json  settings.json
backend/: .dockerignore  .env.example  .flake8  .gitignore  .watchfiles.exclude  Dockerfile  README-AI.md  README.md  alembic.ini  app.py  docker-compose.yml  fly.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_backend.sh  start_worker.sh  tigris.Dockerfile  tigris.toml  worker.py
backend/api/: main.py  security.py  utils.py
backend/api/lib/: __init__.py
backend/api/routes/: __init__.py  admin.py  auth.py  calendar.py  directories.py  events.py  feed.py  insights.py  library.py  live.py  market.py  media.py  notifications.py  plan.py  posts.py  processes.py  progress.py  reports.py  search.py  settings.py  topics.py  users.py
backend/api/schemas/: admin.py  auth.py  base.py  calendar.py  events.py  feed.py  insights.py  library.py  live.py  media.py  (+8 more)
backend/db/: __init__.py  database.py  models.py  setup_db.py
backend/migrations/: env.py
backend/scripts/: check_deployment.sh  db_setup.sh  deploy_fly.sh  dev.sh  format_code.sh  generate_requirements.sh  init_data.sh  kill_dev.sh  kill_server.sh  manage_migrations.sh  migrate_db.sh  reset_migrations.sh  run_tests.sh  setup.sh  setup_fly_services.sh  start_dev_services.sh  update_api_tests.sh
backend/services/: __init__.py
backend/tasks/: event_tasks.py  media_processing_tasks.py  notification_tasks.py
backend/tests/: run_tests.sh
(+518 files in other folders)
